--- a/listpixProj/users/templates/users/profile.html
+++ b/listpixProj/users/templates/users/profile.html
@@ -30,19 +30,21 @@
         </h1>
         <h2>
             {% if user.profile.profilePic %}
-            <img src="{{ user.profile.profilePic.url }}"
-            class="profile-pic">
+                <img src="{{ user.profile.profilePic.url }}"
+                class="profile-pic">
             {%else%}
-            <img src="{% static 'default_images/default_profile_picture.jpg' %}"
-            class="profile-pic">
+                <img src="{% static 'default.jpg' %}"
+                class="profile-pic">
             {%endif%}
             
             @{{ user.username }}
         </h2>
+
         <h3>
             Bio: 
             {{ user.profile.bio }}
         </h3>
+
         <form action="{% url 'update_user' %}" method="get">
             <button type="submit" class="btn">Update Profile</button>
         </form>
