--- a/listpixProj/users/templates/users/update_user.html
+++ b/listpixProj/users/templates/users/update_user.html
@@ -29,11 +29,11 @@
         </h1>
         <h2>
             {% if user.profile.profilePic %}
-            <img src="{{ user.profile.profilePic.url }}"
-            class="profile-pic">
+                <img src="{{ user.profile.profilePic.url }}"
+                class="profile-pic">
             {%else%}
-            <img src="{% static 'default_images/default_profile_picture.jpg' %}"
-            class="profile-pic">
+                <img src="{% static 'default.jpg' %}"
+                class="profile-pic">
             {%endif%}
             
             @{{ user.username }}
@@ -42,7 +42,7 @@
             Bio: 
             {{ user.profile.bio }}
         </h3>
-        
+
         <form action="{% url 'profile' %}" method="get">
             <button type="submit" class="btn">Done</button>
         </form>
