User can now update their profile username/bio/pfp/email

--- a/listpixProj/users/templates/users/profile.html
+++ b/listpixProj/users/templates/users/profile.html
@@ -48,6 +48,10 @@
         <form action="{% url 'update_user' %}" method="get">
             <button type="submit" class="btn">Update Profile</button>
         </form>
+
+        <h3>
+            Posts:
+        </h3>
     </body>
 
 </html>
