--- a/listpixProj/users/templates/users/update_user.html
+++ b/listpixProj/users/templates/users/update_user.html
@@ -27,25 +27,12 @@
         <h1>
             Listpix
         </h1>
-        <h2>
-            {% if user.profile.profilePic %}
-                <img src="{{ user.profile.profilePic.url }}"
-                class="profile-pic">
-            {%else%}
-                <img src="{% static 'default.jpg' %}"
-                class="profile-pic">
-            {%endif%}
-            
-            @{{ user.username }}
-        </h2>
-        <h3>
-            Bio: 
-            {{ user.profile.bio }}
-        </h3>
-
-        <form action="{% url 'profile' %}" method="get">
-            <button type="submit" class="btn">Done</button>
-        </form>
+        <h2>Update Profile</h2>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ user_form.as_p }}
+            {{ profile_form.as_p }}
+        <button type="submit">Done</button>
     </body>
 
 </html>
