Created UI and logic for feed, account creation

--- a/listpixProj/users/templates/users/comment_create.html
+++ b/listpixProj/users/templates/users/comment_create.html
@@ -6,12 +6,12 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title">Login</h2>
+          <h2 class="card-title">Add Comment</h2>
+          <p class="card-text">{{ post.content }}</p>
           <form method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <p>Don't have an account? <a href="{% url 'signup' %}">Signup</a></p>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Comment</button>
           </form>
         </div>
       </div>
