--- a/listpixProj/users/templates/users/change_username.html
+++ b/listpixProj/users/templates/users/change_username.html
@@ -1,4 +1,4 @@
-{% extends 'users/base.html' %}
+{% extends '/users/base.html' %}
 {% load bootstrap5 %}
 
 {% block content %}
@@ -6,12 +6,11 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title">Login</h2>
+          <h2 class="card-title">Change Username</h2>
           <form method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <p>Don't have an account? <a href="{% url 'signup' %}">Signup</a></p>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Change Username</button>
           </form>
         </div>
       </div>
