--- a/listpixProj/users/templates/users/base.html
+++ b/listpixProj/users/templates/users/base.html
@@ -30,7 +30,7 @@
                   <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'user_profile' user.username %}">Profile</a>
+                  <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                 </li>
               {% else %}
                 <li class="nav-item">
