--- a/listpixProj/users/templates/users/update_user.html
+++ b/listpixProj/users/templates/users/update_user.html
@@ -7,10 +7,10 @@
         <meta charset="UTF-8">
         <meta 
             name    = "color-scheme" 
-            content = "light dark"
+            content = "light"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> My Profile - Listpix </title>
+        <title> My Profile - LISTPIX </title>
         <style>
             .profile-pic{
                 width: 100px;      
