--- a/listpixProj/users/templates/users/post_create.html
+++ b/listpixProj/users/templates/users/post_create.html
@@ -7,7 +7,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="card-title">New Post</h2>
-          <form method="post">
+          <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% bootstrap_form form %}
             <button type="submit" class="btn btn-primary">Post</button>
