Profile now displays user's posts and looks cleaner, user can now look at liked posts, posts in the feed now have a heart icon for liking a post

--- a/listpixProj/users/templates/users/base.html
+++ b/listpixProj/users/templates/users/base.html
@@ -5,6 +5,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LISTPIX</title>
+    <style>
+      .username-line {
+        display: flex;
+        align-items: center; 
+        border-radius: 5px;
+        background-color: #EFEFEF;
+        padding: 7px;
+        position: relative;
+        overflow: hidden;
+      }
+      .username-line h2 {
+        margin: 0;
+        white-space: nowrap; 
+        overflow: hidden; 
+        text-overflow: ellipsis; 
+        width: calc(100% - 40px);
+      }
+      .profile-banner{
+        background-color: #D5D5D5;
+        padding: 30px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        position: relative;
+      }
+      .small-icon{
+        width: 30px;      
+        height: 30px; 
+        cursor: pointer;
+        object-fit: cover;
+        margin-left: 5px;
+        transition: transform 0.3s ease;
+        position: relative;
+      }
+      .small-icon2{
+        width: 25px;      
+        height: 25px; 
+        cursor: pointer;
+        transition: transform 0.3s ease;
+        position: relative;
+      }
+      .small-icon:hover {
+        transform: scale(1.1); 
+      }
+      .small-icon2:hover {
+        transform: scale(1.1); 
+      }
+    </style>
+
     {% bootstrap_css %}
     {% load static %}
     {% comment %}Add this Style page if you are doing any custom styling{% endcomment %}
@@ -30,7 +78,7 @@
                   <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                  <a class="nav-link" href="{% url 'user_profile' %}">Profile</a>
                 </li>
               {% else %}
                 <li class="nav-item">
