--- a/listpixProj/users/templates/users/update_user.html
+++ b/listpixProj/users/templates/users/update_user.html
@@ -1,38 +1,16 @@
+{% extends 'users/base.html' %}
+{% load bootstrap5 %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta 
-            name    = "color-scheme" 
-            content = "light"
-        />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> My Profile - LISTPIX </title>
-        <style>
-            .profile-pic{
-                width: 100px;      
-                height: 100px;  
-                border-radius: 50%; 
-                object-fit: cover;  
-            }
-            
-        </style>
-    </head>
-
-
-    <body>
-        <h1>
-            Listpix
-        </h1>
-        <h2>Update Profile</h2>
+{% block content %}
+<div class="row profile-banner">
+    <div class="username-line">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ user_form.as_p }}
             {{ profile_form.as_p }}
-        <button type="submit">Done</button>
-    </body>
+        <button type="submit" class="btn btn-primary">Done</button>
+    </div>
+</div>
 
-</html>
+{% endblock %}
