--- a/listpixProj/users/templates/users/user_profile.html
+++ b/listpixProj/users/templates/users/user_profile.html
@@ -1,39 +1,82 @@
 {% extends 'users/base.html' %}
+{% load static %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-md-6">
-      <h2>{{ profile_user.username }}'s Profile</h2>
+  <div class="row profile-banner">
+    <div class="col-md-3">
+      {% if user.profile.profilePic %}
+        <img src="{{user.profile.profilePic.url}}"
+        style="width: 150px;      
+        height: 150px;  
+        border-radius: 50%; 
+        object-fit: cover;
+        margin-bottom: 15px;
+        position: relative;">
+      {%else%}
+        <img src="{% static 'default.jpg' %}"
+        style="width: 150px;      
+        height: 150px;  
+        border-radius: 50%; 
+        object-fit: cover;
+        margin-bottom: 15px;
+        position: relative;">>
+      {%endif%}
+    </div>
+    <div class="col-md-8">
+    <h5>
+      <h5> About {{user.username}}: </h5>
+      {{ user.profile.bio }}
+    </h5>
+    <div>
+    </div>
+      
       {% if request.user == profile_user %}
         <p>
           <a href="{% url 'change_username' %}">Change Username</a>
         </p>
       {% endif %}
-
-      <h4>Posts</h4>
-      {% for post in posts %}
-        <div class="card mb-3">
-          <div class="card-body">
-            <p class="card-text">{{ post.content }}</p>
-            <p class="card-text">Posted on {{ post.created_at }}</p>
-          </div>
-        </div>
-        {% empty %}
-        <p>No posts yet.</p>
-      {% endfor %}
+      </div>
+      <div class="username-line">
+        <h2>@{{user.username }}</h2>
+        <a href="{% url 'update_user' %}">
+          <img src="{% static 'edit-icon.png' %}" alt="Update Profile" class="small-icon">
+        </a>
+      </div>
     </div>
-    <div class="col-md-6">
-      <h4>Liked Posts</h4>
-      {% for like in likes %}
-        <div class="card mb-3">
-          <div class="card-body">
-            <p class="card-text">{{ like.post.content }}</p>
-            <p class="card-text">Posted by: {{ like.post.user.username }} on {{ like.post.created_at }}</p>
+    <div class="row">
+      <div class="col-md-6">
+        <a href="{% url 'user_liked' %}">
+          <button type="submit" class="btn btn-primary">Liked Posts</button>
+        </a>
+        <br><br>
+        </div>
+      <h4>Posts </h4>
+      <div class= "row">
+      {% for post in posts %}
+        {% if request.user == post.user%}
+        <div class="col-md-4 col-sm-6 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              {% if post.image %}
+                <div class="post-image-container">
+                  <img src="{{ post.image.url }}" alt="Post Image" style="max-width: 100%; height: 200px; width: 400px; clip-path: inset(5% round 15px); object-fit: cover; ">
+                </div>
+              {%endif%}
+              <p class="card-text">{{ post.content }}</p>
+              <p style="font-size: 0.7rem">Posted on {{ post.created_at }}</p>
+              <a href="{% url 'comment_create' post.pk %}?next={{ request.path }}" class="btn btn-primary btn-sm">Add Comment</a>
+              <a href="{% url 'post_delete' post.pk %}?next={{ request.path }}" class="btn btn-danger btn-sm">Delete</a>
+            </div>
           </div>
         </div>
-        {% empty %}
-        <p>No liked posts yet.</p>
+        {% endif %}
       {% endfor %}
+      </div>
+    </div>
+    
+    <div class="col-md-6">
     </div>
   </div>
+
+  
 {% endblock %}
