--- a/listpixProj/users/templates/users/user_profile.html
+++ b/listpixProj/users/templates/users/user_profile.html
@@ -19,23 +19,19 @@
         border-radius: 50%; 
         object-fit: cover;
         margin-bottom: 15px;
-        position: relative;">>
+        position: relative;">
       {%endif%}
     </div>
     <div class="col-md-8">
-    <h5>
-      <h5> About {{user.username}}: </h5>
-      {{ user.profile.bio }}
-    </h5>
-    <div>
-    </div>
+      <h5>About {{user.username}}:</h5>
+      <p>{{ user.profile.bio }}</p>
       
       {% if request.user == profile_user %}
         <p>
           <a href="{% url 'change_username' %}">Change Username</a>
         </p>
       {% endif %}
-      </div>
+      
       <div class="username-line">
         <h2>@{{user.username }}</h2>
         <a href="{% url 'update_user' %}">
@@ -43,40 +39,75 @@
         </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <a href="{% url 'user_liked' %}">
-          <button type="submit" class="btn btn-primary">Liked Posts</button>
-        </a>
-        <br><br>
-        </div>
-      <h4>Posts </h4>
-      <div class= "row">
-      {% for post in posts %}
-        {% if request.user == post.user%}
-        <div class="col-md-4 col-sm-6 mb-4">
-          <div class="card h-100">
-            <div class="card-body">
-              {% if post.image %}
-                <div class="post-image-container">
-                  <img src="{{ post.image.url }}" alt="Post Image" style="max-width: 100%; height: 200px; width: 400px; clip-path: inset(5% round 15px); object-fit: cover; ">
-                </div>
-              {%endif%}
-              <p class="card-text">{{ post.content }}</p>
-              <p style="font-size: 0.7rem">Posted on {{ post.created_at }}</p>
-              <a href="{% url 'comment_create' post.pk %}?next={{ request.path }}" class="btn btn-primary btn-sm">Add Comment</a>
-              <a href="{% url 'post_delete' post.pk %}?next={{ request.path }}" class="btn btn-danger btn-sm">Delete</a>
-            </div>
-          </div>
-        </div>
-        {% endif %}
-      {% endfor %}
-      </div>
-    </div>
-    
-    <div class="col-md-6">
-    </div>
   </div>
 
-  
+  <div class="row mt-4">
+    <div class="col-md-12">
+      <!-- Tabs Navigation -->
+      <ul class="nav nav-tabs" id="profileTabs" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button" role="tab" aria-controls="posts" aria-selected="true">Posts</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="assigned-tasks-tab" data-bs-toggle="tab" data-bs-target="#assigned-tasks" type="button" role="tab" aria-controls="assigned-tasks" aria-selected="false">Assigned Tasks</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="completed-tasks-tab" data-bs-toggle="tab" data-bs-target="#completed-tasks" type="button" role="tab" aria-controls="completed-tasks" aria-selected="false">Completed Tasks</button>
+        </li>
+      </ul>
+
+      <!-- Tab Content -->
+      <div class="tab-content" id="profileTabsContent">
+        <!-- Posts Tab -->
+        <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+          <h4 class="mt-3">Posts</h4>
+          <div class="row">
+            {% for post in posts %}
+              {% if request.user == post.user %}
+                <div class="col-md-4 col-sm-6 mb-4">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      {% if post.image %}
+                        <div class="post-image-container">
+                          <img src="{{ post.image.url }}" alt="Post Image" style="max-width: 100%; height: 200px; width: 400px; clip-path: inset(5% round 15px); object-fit: cover; ">
+                        </div>
+                      {% endif %}
+                      <p class="card-text">{{ post.content }}</p>
+                      <p style="font-size: 0.7rem">Posted on {{ post.created_at }}</p>
+                      <a href="{% url 'comment_create' post.pk %}?next={{ request.path }}" class="btn btn-primary btn-sm">Add Comment</a>
+                      <a href="{% url 'post_delete' post.pk %}?next={{ request.path }}" class="btn btn-danger btn-sm">Delete</a>
+                    </div>
+                  </div>
+                </div>
+              {% endif %}
+            {% endfor %}
+          </div>
+        </div>
+
+        <!-- Assigned Tasks Tab -->
+        <div class="tab-pane fade" id="assigned-tasks" role="tabpanel" aria-labelledby="assigned-tasks-tab">
+          <h4 class="mt-3">Assigned Tasks</h4>
+          <ul>
+            {% for task in assigned_tasks %}
+              <li>{{ task.task_name }}</li>
+            {% empty %}
+              <p>No assigned tasks.</p>
+            {% endfor %}
+          </ul>
+        </div>
+
+        <!-- Completed Tasks Tab -->
+        <div class="tab-pane fade" id="completed-tasks" role="tabpanel" aria-labelledby="completed-tasks-tab">
+          <h4 class="mt-3">Completed Tasks</h4>
+          <ul>
+            {% for task in completed_tasks %}
+              <li>{{ task.task_name }}</li>
+            {% empty %}
+              <p>No completed tasks.</p>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
