--- a/listpixProj/users/templates/users/feed.html
+++ b/listpixProj/users/templates/users/feed.html
@@ -12,6 +12,9 @@
         </div>
         {% endif %} 
         <p class="card-text">{{ post.content }}</p>
+        {% if post.task %}
+        <p class="card-text"><strong>Task:</strong> {{ post.task.task_name }}</p>
+        {% endif %}
         <p class="card-text">Posted by: {{ post.user.username }} on {{ post.created_at }}</p>
         {% comment %} <p class="card-text">Likes: {{ post.likes.count }}</p> {% endcomment %}
         <div class="d-flex justify-content-between">
