profile update screen uses bootstrap

--- a/listpixProj/users/templates/users/user_profile.html
+++ b/listpixProj/users/templates/users/user_profile.html
@@ -19,7 +19,7 @@
         border-radius: 50%; 
         object-fit: cover;
         margin-bottom: 15px;
-        position: relative;">>
+        position: relative;">
       {%endif%}
     </div>
     <div class="col-md-8">
