--- a/listpixProj/users/templates/users/update_user.html
+++ b/listpixProj/users/templates/users/update_user.html
@@ -3,13 +3,21 @@
 {% load static %}
 
 {% block content %}
-<div class="row profile-banner">
-    <div class="username-line">
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ user_form.as_p }}
-            {{ profile_form.as_p }}
-        <button type="submit" class="btn btn-primary">Done</button>
+<div class="row justify-content-center">
+    <div>
+        <div class="card shadow-sm">
+            <div class="card-header bg-primary text-white">
+                <h2 class="mb-0">Update Profile</h2>
+            </div>
+            <div class="card-body">
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% bootstrap_form user_form %}
+                    {% bootstrap_form profile_form %}
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Done </button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
