--- a/listpixProj/users/templates/users/user_profile.html
+++ b/listpixProj/users/templates/users/user_profile.html
@@ -4,16 +4,16 @@
   <div class="row">
     <div class="col-md-6">
       <h2>{{ profile_user.username }}'s Profile</h2>
-      {% if request.user == profile_user %}
-        <p>
-          <a href="{% url 'change_username' %}">Change Username</a>
-        </p>
-      {% endif %}
 
       <h4>Posts</h4>
       {% for post in posts %}
         <div class="card mb-3">
           <div class="card-body">
+            {% if post.image %}
+            <div class="post-image-container">
+              <img src="{{ post.image.url }}" alt="Post Image" style="max-width: 100%; height: auto; width: 400px; clip-path: inset(5% round 15px);">
+            </div>
+            {% endif %} 
             <p class="card-text">{{ post.content }}</p>
             <p class="card-text">Posted on {{ post.created_at }}</p>
           </div>
@@ -27,6 +27,11 @@
       {% for like in likes %}
         <div class="card mb-3">
           <div class="card-body">
+            {% if like.post.image %}
+            <div class="post-image-container">
+              <img src="{{ like.post.image.url }}" alt="Post Image" style="max-width: 100%; height: auto; width: 400px; clip-path: inset(5% round 15px);">
+            </div>
+            {% endif %} 
             <p class="card-text">{{ like.post.content }}</p>
             <p class="card-text">Posted by: {{ like.post.user.username }} on {{ like.post.created_at }}</p>
           </div>
