fixed user link
fixed user link

--- a/listpixProj/users/templates/users/base.html
+++ b/listpixProj/users/templates/users/base.html
@@ -78,7 +78,7 @@
                   <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'user_profile' %}">Profile</a>
+                  <a class="nav-link" href="{% url 'user_profile' request.user.username %}">Profile</a>
                 </li>
               {% else %}
                 <li class="nav-item">
